--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-speech-recognition": "^3.9.4",
     "axios": "^1.6.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
